--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </main>
 
     <footer class="footer">
-      <p>...fresh as HELL</p>
+      <p>....fresh as HELL</p>
     </footer>
 
   </body>
