--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <div class="container">
           <h2 class="section-title">Seasons</h2>
           <div class="split">
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-1/BF7wIiGU/2gBho4ek" class="season_item">
               <img src="1.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 1</span>13 episodes</p>
             </a>
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-2/OnqVf8ca/WyIMpBeE" class="season_item">
               <img src="2.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 2</span>24 episodes</p>
             </a>
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-3/eNegRh3B/WJMCJR4n" class="season_item">
               <img src="3.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 3</span>23 episodes</p>
             </a>
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-4/dNJe7mQE/9eAzpg48" class="season_item">
               <img src="4.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 4</span>19 episodes</p>
             </a>
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-5/1SEkhGqX/DUrmzcex" class="season_item">
               <img src="5.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 5</span>22 episodes</p>
             </a>
-            <a href="#" class="season_item">
+            <a href="https://www4.fusionmovies.to/tv-series/fresh-off-the-boat-season-6/ckHiPIkS/Qk1yqBll" class="season_item">
               <img src="6.png" alt="" class="season_img">
                 <p class="season_details"><span class="price">Season 6</span>15 episodes</p>
             </a>
